src/test/ui/conditional-compilation/cfg-in-crate-1.stderr
error[E0601]: `main` function not found in crate `cfg_in_crate_1`
  --> $DIR/cfg-in-crate-1.rs:3:1
   |
LL | #![cfg(bar)]
   | ^
   |
help: define a function named `main` at the crate root
   |
LL | fn main() {}
   |

error: aborting due to previous error

For more information about this error, try `rustc --explain E0601`.
